# llmops_project_rolebase_rag

./: .dockerignore  .env.example  .gitignore  Docker-compose.yml  Dockerfile  Dockerfile.streamlit  Prometheus .yml  README.md  alembic.ini  app.py  check_structure.py  clean_init.py  pyproject.toml  test.py  test_embeding.py  test_ingestion.py  test_pil.py  test_vectordb.py  verify.py
.github/workflows/: ci.yml
alembic/: env.py
api_services/: main.py
api_services/routers/: auth.py  chat.py
api_services/schema/: document.py
api_services/schemas/: __init__.py  auth.py  document.py  query.py  user.py
auth/: auth_service.py  dependencies.py  jwt_service.py  security.py
config/: settings.py
models/: database.py  model.py  seeds.py  user.py
models/schema/: query.py  user.py
src/data_ingestion/: chunker_service.py  data_loader.py
src/embedding_layer/: embedding_service.py
src/ingestion_pipeline/: ingest_to_qdrant.py  reingest.py
src/llm_layer/: llm_connecter.py
src/monitoring/: langsmith_tracer.py  metrices.py
src/monitoring/grafana/provisioning/dashboards/: dashboards.yml  ragoverview.json
src/monitoring/grafana/provisioning/datasources/: prometheus.yml
src/monitoring/prometheus/: prometheus.yml
src/pil_guardrils/: __init__.py  pil_guard.py
src/prompts_layer/: prompts.py
src/rag_chain/: chain_pipeline.py
src/ragas_evaluation/: __init__.py  background.py  ragas_evaluator.py  rags_evaluator.py
src/ragas_evaluation/datasets/: general.json
src/retrieval/: retriever_service.py
src/role_based_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vectordb/: __init__.py  qdrant_service.py  qdrant_store.py
test_backend/: check_qdrant.py  fix_index.py  ingest_all.py  recreate_collection.py  test.py  test_chunker.py  test_insert.py  test_one.py  test_retriever.py  test_vectordb.py  verify_search.py
testing/: check_hr_data.py  check_loader.py  debug_answer.py  rag_chain.py  test_chunker.py  test_embedding.py  test_ingestion.py  test_llm_retriver.py  test_metrices.py  testing_langsmith.py  testing_vectordb.py
tests/integration/: conftest.py  test_login.py  test_qdrant.py  test_register.py
tests/unit_test/: test_auth.py  test_chunking_service.py  test_data_loader.py  test_db_session.py  test_department_prompts.py  test_embedding_service.py  test_jwt_service.py  test_llm_connector.py  test_user_model.py
utils/: exceptions.py  logger_exceptions.py
