[project]
name = "role-based-rag"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # ===========================
    # FastAPI Backend
    # ===========================
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-multipart",
    "jinja2",
    # ===========================
    # Database (PostgreSQL)
    # ===========================
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
    "alembic",
    # ===========================
    # Authentication & Security
    # ===========================
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "slowapi",
    # ===========================
    # Cache & Session Management
    # ===========================
    "redis",
    # ===========================
    # Vector Database
    # ===========================
    "qdrant-client",
    # ===========================
    # LangChain Ecosystem
    # ===========================
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-qdrant",
    # ===========================
    # LLM & Embeddings
    # ===========================
    "openai",
    "google-generativeai",
    "sentence-transformers",
    "transformers",
    "torch",
    # ===========================
    # Document Processing
    # ===========================
    "docling",
    "pypdf",
    "python-docx",
    "openpyxl",
    "unstructured",
    "pandas",
    "datasets",
    "deepeval",
    # ===========================
    # Monitoring & Observability
    # ===========================
    "langsmith",
    "prometheus-client",
    # ===========================
    # PII Detection / Guardrails
    # ===========================
    "presidio-analyzer",
    "presidio-anonymizer",
    # ===========================
    # Config & Utilities
    # ===========================
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    # ===========================
    # HTTP Clients
    # ===========================
    "requests",
    "httpx",
    # ===========================
    # Retry Mechanism
    # ===========================
    "tenacity",
    # ===========================
    # Logging
    # ===========================
    "loguru",
    # ===========================
    # Progress Bars
    # ===========================
    "tqdm",
    # ===========================
    # AWS Services
    # ===========================
    "boto3",
    # ===========================
    # Testing
    # ===========================
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "faker",
    "coverage",
    "langchain-huggingface>=1.2.2",
    "langchain-google-vertexai>=3.2.4",
]
