[project]
name = "role-based-rag"
version = "0.1.0"
requires-python = "=3.11"

dependencies = [
    # FastAPI
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-multipart",
    "jinja2",

    # Database
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
    "alembic",

    # Authentication
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "slowapi",

    # Cache
    "redis",

    # Vector DB
    "qdrant-client",

    # LangChain
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-google-vertexai",
    "langchain-qdrant",
    "langchain-huggingface",

    # LLM
    "openai",
    "google-generativeai",
    "sentence-transformers",
    "transformers",
    "torch",
    "numpy",

    # Document Processing
    "docling",
    "pypdf",
    "python-docx",
    "openpyxl",
    "unstructured",

    # Data
    "pandas",
    "datasets",

    # Evaluation
    "ragas",
    "deepeval",

    # Monitoring
    "langsmith",
    "prometheus-client",

    # Guardrails
    "presidio-analyzer",
    "presidio-anonymizer",

    # Config
    "pydantic",
    "pydantic-settings",
    "email-validator",
    "python-dotenv",

    # HTTP
    "requests",
    "httpx",

    # Utilities
    "tenacity",
    "loguru",
    "tqdm",

    # AWS
    "boto3",

    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "faker",
    "coverage",

    # UI
    "streamlit"
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: fast, no external calls",
    "integration: real local services, mocked LLM",
    "e2e: full pipeline, real LLM, costs money",
]
asyncio_mode = "auto"